<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_edit">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/topic"
        android:layout_width="560dp"
        android:layout_height="78dp"
        android:layout_marginTop="131dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/topic_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/topic_hint"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/content"
        android:layout_width="560dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        android:minLines="10"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic" />


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorButton"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageButton
        android:id="@+id/mail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/mail_con_des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/moment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/mail_con_des"
        app:layout_constraintStart_toStartOf="@id/mail_button"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button"
        app:srcCompat="@drawable/moment" />

    <TextView
        android:id="@+id/link_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_list_title"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/moment_button" />

    <ListView
        android:id="@+id/linked_ideas"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/link_title" />

</android.support.constraint.ConstraintLayout>
