<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_signup">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="343dp"
        android:layout_height="78dp"
        android:layout_marginStart="@dimen/port_margin_textinput_gori"
        android:layout_marginLeft="@dimen/port_margin_textinput_gori"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="@dimen/port_margin_textinput_gori"
        android:layout_marginRight="@dimen/port_margin_textinput_gori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:hint="@string/username_hint" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/username_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/warn"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="343dp"
        android:layout_height="78dp"
        android:layout_marginStart="@dimen/port_margin_textinput_gori"
        android:layout_marginLeft="@dimen/port_margin_textinput_gori"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="@dimen/port_margin_textinput_gori"
        android:layout_marginRight="@dimen/port_margin_textinput_gori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/password_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/warn"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="343dp"
        android:layout_height="78dp"
        android:layout_marginStart="@dimen/port_margin_textinput_gori"
        android:layout_marginLeft="@dimen/port_margin_textinput_gori"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="@dimen/port_margin_textinput_gori"
        android:layout_marginRight="@dimen/port_margin_textinput_gori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/con_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/password_confirm_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/con_pwd_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/warn"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />
    <Button
        android:id="@+id/signup_con"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorButton"
        android:text="@string/signup_button"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
